Closed Bug 496840 Opened 16 years ago Closed 16 years ago

Dynamic changes to fieldset legends don't work

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

References

Details

Attachments

(1 file)

See upcoming patch and tests. nsFieldsetFrame::AppendFrames/InsertFrames/RemoveFrame fail when multiple legends are present. They also fail to handle cases induced by my patch in bug 495385, where ContentInserted on a <legend> frame may create a frame for a text node that precedes it, so we InsertFrames with a text frame followed by the legend.
Attached patch fixSplinter Review
Easy stuff really...
Attachment #382068 - Flags: superreview?(bzbarsky)
Attachment #382068 - Flags: review?(bzbarsky)
Comment on attachment 382068 [details] [diff] [review] fix So the key here is that we never take the ContentAppended codepath for fieldset content because of the multiple insertion points thing? I guess that works, sure.
Attachment #382068 - Flags: superreview?(bzbarsky)
Attachment #382068 - Flags: superreview+
Attachment #382068 - Flags: review?(bzbarsky)
Attachment #382068 - Flags: review+
+ // aFrameList is not allowed to contain "the legend" for this frameset s/frameset/fieldset/ in two places
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: