Bug 496840. Make dynamic insertion and removal of legends work in the presence of multiple legends. r+sr=bzbarsky